--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body { margin: 0; padding: 0; }
 </head>
 <body>
 <div id="map"></div>
+<script src="data.js"></script>
 <script>
     // TO MAKE THE MAP APPEAR YOU MUST
 	// ADD YOUR ACCESS TOKEN FROM
@@ -27,28 +28,28 @@ body { margin: 0; padding: 0; }
     });
 
     map.on('load', () => {
-  // Add a source for the GeoJSON file
-  map.addSource('geojson-data', {
-    type: 'geojson',
-    data: 'gregmap.geojson' // Replace with your file path or URL
-  });
-
-  // Add a layer to display the GeoJSON data
-  map.addLayer({
-    id: 'geojson-layer',
-    type: 'circle', // Type of layer (e.g., circle, line, fill)
-    source: 'geojson-data',
-    paint: {
-      'circle-radius': 5,
-      'circle-color': '#007cbf'
-    }
-  });
-});
-
-// pop up markers
-
-
+        console.log(data.features)
+        data.features.forEach(feature => {
+            console.log(feature.properties.Latitude)
+            console.log(feature.properties.Longitude)
+            const lat = feature.properties.Latitude;
+            const long = feature.properties.Longitude;
+            const address = feature.properties.address;
+            const stanza = feature.content.stanza;
+            const marker = new mapboxgl.Marker()
+                .setLngLat([long,lat])  
+                .setPopup(new mapboxgl.Popup().setHTML(`
+                    <h1>${address}</h1>
+                    <body>${stanza}</body> 
+                    <img></img>
+                `))
+                .addTo(map)  
+        });
+    
+    
+    });
 </script>
+<script src="index.js"></script>
 
 </body>
 </html>
