--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <link rel="stylesheet" href="main.css">
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.8.0/mapbox-gl.js"></script>
 <style>
-body { margin: 0; padding: 0; }
+body { margin: 0; padding: 0; font-family: sans-serif; }
 #map { position: absolute; top: 0; bottom: 0; width: 100%; }
 
 </style>
 </head>
 <body>
 <div id="map"></div>
+<div id="story"></div>
 <script src="data.js"></script>
 <script>
     // TO MAKE THE MAP APPEAR YOU MUST
