--- a/index.html
+++ b/index.html
@@ -2,21 +2,25 @@
 <!DOCTYPE html>  
 <html>
 <head>
-<meta charset="utf-8">
-<title>Display a map on a webpage</title>
-<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
-<link href="https://api.mapbox.com/mapbox-gl-js/v3.8.0/mapbox-gl.css" rel="stylesheet">
-<link rel="stylesheet" href="main.css">
-<script src="https://api.mapbox.com/mapbox-gl-js/v3.8.0/mapbox-gl.js"></script>
-<style>
-body { margin: 0; padding: 0; font-family: sans-serif; }
-#map { position: absolute; top: 0; bottom: 0; width: 100%; }
-
+    <meta charset="utf-8">
+    <title>Display a map on a webpage</title>
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+    <link href="https://api.mapbox.com/mapbox-gl-js/v3.8.0/mapbox-gl.css" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v3.8.0/mapbox-gl.js"></script>
+    <!--<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v3.8.0/mapbox-gl.js'></script> NEW storytelling-->
+    <!--<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v3.8.0/mapbox-gl.css' rel='stylesheet' /> NEW storytelling-->
+    <!--<script src="https://cdn.jsdelivr.net/npm/mapbox-gl-globe-minimap@1.2.0/dist/bundle.js"></script> NEW storytelling-->
+    <src="https://unpkg.com/scrollama"></script> <!--NEW scrollama-->
+    <style>
+        body { margin: 0; padding: 0; font-family: sans-serif; }
+        #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+        .map-popup{ font-size: 14px; line-height: 1.5;} /* NEW add map popup */ 
 </style>
 </head>
 <body>
 <div id="map"></div>
-<div id="story"></div>
+<div id="story"></div> <!--NEW storytelling config-->
 <script src="data.js"></script>
 <script>
     // TO MAKE THE MAP APPEAR YOU MUST
@@ -63,6 +67,7 @@ body { margin: 0; padding: 0; font-family: sans-serif; }
     
     //});
 </script>
+<script src="config.js"></script> <!--NEW config file for storytelling chapters-->
 <script src="index.js"></script>
 
 </body>
