wishing for the best

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         body { margin: 0; padding: 0; font-family: sans-serif; }
         #map { position: absolute; top: 0; bottom: 0; width: 100%;}
         #features {
-            width: 50%;
-            margin-left: 50%;
+            width: 25%;
+            margin-left: 25%;
             font-family: sans-serif;
             overflow-y: scroll;
             background-color: #fafafa;
@@ -33,11 +33,13 @@
             border-bottom: none;
             margin-bottom: 200px;
         }
-        /*.map-popup{ font-size: 14px; line-height: 1.5;} /* NEW add map popup */ 
+        *.map-popup{ font-size: 14px; line-height: 1.5;} /* NEW add map popup */ 
 </style>
 </head>
 <body>
 <div id="map"></div>
+<div id="features"></div>
+
 <script src="data.js"></script>
 <script>
     // TO MAKE THE MAP APPEAR YOU MUST
