wishingn for the best

--- a/index2.html
+++ b/index2.html
@@ -35,6 +35,14 @@
             overflow-y: scroll;
             max-width: 50dvh;  /* Limit the maximum width of the image */
         }
+        .marker {
+            background-image: url('https://docs.mapbox.com/demos/custom-markers-gl-js/mapbox-icon.png');
+            background-size: cover;
+            width: 50px;
+            height: 50px;
+            border-radius: 0%;
+            cursor: pointer;
+        }
 </style>
 </head>
 <body>
@@ -74,7 +82,7 @@
                         "coordinates": [-97.9062893, 28.8791858]
                     },
                     "content": {
-                        "stanzaEs": "En el condad de Carnes. \nmiren lo que ha sucedido,\nmurió el Cherife Mayor. \nquednado Roman herido",
+                        "stanzaEs": "En el condad de Carnes\nmiren lo que ha sucedido,\nmurió el Cherife Mayor \nquednado Roman herido",
                         "stanzaEn": "In the county of Karnes, \nLook what has happened; \nThe Major Sheriff died, \nLeaving Román badly wounded.",
                         "audioFile":"audio/Tejeda_Greg_Cortez.mp3",
                         "articleImg": "articleImg/Cortez_is_in_Bexar_Jail._the_Slayer_of_Sheriffs__San_Antonio_Express_published_as_The_Daily_Express___June_25_1901__p1_4.png",
@@ -185,7 +193,10 @@
             // Create marker on the map
             new mapboxgl.Marker()
                 .setLngLat([feature.geometry.coordinates[0], feature.geometry.coordinates[1]])
-                .setPopup(new mapboxgl.Popup().setHTML(`<h3>${feature.properties.address}</h3>`))
+                .setPopup(new mapboxgl.Popup().setHTML(`<h3>${feature.properties.address}</h3>
+                ${feature.content.audioFile ? `<audio controls><source src="${feature.content.audioFile}" type="audio/mp3"></audio>` : ''}
+                <p class="stanzaEs">${feature.content.stanzaEs}</p>
+                <p class="stanzaEn">${feature.content.stanzaEn}</p>`))
                 .addTo(map);
 
             // Create dynamic scroll content
