wishing for the best

--- a/index2.html
+++ b/index2.html
@@ -43,11 +43,17 @@
             border-radius: 0%;
             cursor: pointer;
         }
+        .audio-player {
+            width: 100px;
+            margin: 10px;
+            color: white;
+        }
 </style>
 </head>
 <body>
     <div id="map"></div>
     <div id="features"></div>
+    <div class="audio-player"></div>
 
     <script>
         // Mapbox setup
