--- a/index2.html
+++ b/index2.html
@@ -90,7 +90,7 @@
                     "content": {
                         "stanzaEs": "En el condad de Carnes\nmiren lo que ha sucedido,\nmurió el Cherife Mayor \nquednado Roman herido",
                         "stanzaEn": "In the county of Karnes, \nLook what has happened; \nThe Major Sheriff died, \nLeaving Román badly wounded.",
-                        "audioFile":"audio/Tejeda_Greg_Cortez.mp3",
+                        "audioFile":"audio/GC 1 Mixdown.mp3",
                         "articleImg": "articleImg/Cortez_is_in_Bexar_Jail._the_Slayer_of_Sheriffs__San_Antonio_Express_published_as_The_Daily_Express___June_25_1901__p1_4.png",
                         "articleLink": "articleImg/Cortez_is_in_Bexar_Jail._the_Slayer_of_Sheriffs__San_Antonio_Express_published_as_The_Daily_Express___June_25_1901__p1_4.pdf"
                     }
@@ -113,7 +113,7 @@
             "content":{
                 "stanzaEs":"Tiró con rumbo a Gonzales \nsin ninguna timidez:\n--Síganme rinches cobardes, \nyo soy Gregorio Cortez.",
                 "stanzaEn": "He struck out for Gonzales \nWithout showing any fear, \n'Follow me, cowardly rangers, \nI am Gregorio Cortez.'",
-                "audioFile":null,
+                "audioFile":"audio/GC 10Mixdown.mp3",
                 "articleImg": "articleImg/Hot_on_His_Trail__Dallas_Morning_News__June_18_1901__p1.png",
                 "articleLink": "articleImg/Hot_on_His_Trail__Dallas_Morning_News__June_18_1901__p1.pdf"
 
@@ -137,7 +137,7 @@
             "content": {
                 "stanzaEs": "Se fue de Belmont al rancho, \nlo alacanzaron a rodear, \npoquitos más de trescientos, \ny allí les brincó el corral.",
                 "stanzaEn": "From Belmont he went to the ranch,\nThey succeeded in surrounding him, \nQuite a few more than three hundred,\nBut there he jumped their corral.",
-                "audioFile":null,
+                "audioFile":"audio/GC 11 Mixdown.mp3",
                 "articleImg": "articleImg/Officers_on_Hot_Trails._Many_Determined_Men_Are_in__San_Antonio_Express_published_as_The_Daily_Express___June_18_1901__p1_2.png",
                 "articleLink":"articleImg/Officers_on_Hot_Trails._Many_Determined_Men_Are_in__San_Antonio_Express_published_as_The_Daily_Express___June_18_1901__p1_2.pdf"
 
@@ -161,7 +161,7 @@
             "content": {
                 "stanzaEs": "Salió Gregorio Cortez, \nsalió con rumbo a Laredo, \nno lo quisieron seguir \nporque le tuvieron miedo.",
                 "stanzaEn": "Gregorio Cortez went out, \nHe went towards Laredo \nThey decided not to follow \nBecause they were afraid of him.",
-                "audioFile":null,
+                "audioFile":"audio/GC 14Mixdown.mp3",
                 "articleImg": "articleImg/Cortez_Has_Been_Identified._William_Loueary_and__San_Antonio_Express_published_as_The_Daily_Express___June_24_1901__p1_2.png",
                 "articleLink":"articleImg/Cortez_Has_Been_Identified._William_Loueary_and__San_Antonio_Express_published_as_The_Daily_Express___June_24_1901__p1_2.pdf"
 
@@ -185,7 +185,7 @@
             "content": {
                 "stanzaEs": "Allá por El Encinal, \nsegún lo que aquí se dice, \nle formaron un corral y les mató otro cherife.",
                 "stanzaEn": "Over by El Encinal,\nAccording to what we hear, \nThey made him a corral, \n And he killed them another sheriff.",
-                "audioFile":null,
+                "audioFile":"audio/GC 17 Mixdown.mp3",
                 "articleImg": "articleImg/Cortez_Eludes_Pursuers_Wily_Fugitive_Seems_to_Have__San_Antonio_Express_published_as_The_Daily_Express___June_22_1901__p1_2.png",
                 "articleLink":"articleImg/Cortez_Eludes_Pursuers_Wily_Fugitive_Seems_to_Have__San_Antonio_Express_published_as_The_Daily_Express___June_22_1901__p1_2.pdf"
 
