--- a/index2.html
+++ b/index2.html
@@ -30,10 +30,9 @@
             margin-bottom: 200px;
         }
         .news-image img {
-            width: auto;  /* Make the image fill the container width */
+            width: 100%;  /* Make the image fill the container width */
             height: auto; /* Maintain aspect ratio */
-            overflow-y: scroll;
-            max-width: 50dvh;  /* Limit the maximum width of the image */
+            max-width: 50vw;  /* Limit the maximum width of the image */
         }
         .marker {
             background-image: url('https://docs.mapbox.com/demos/custom-markers-gl-js/mapbox-icon.png');
@@ -48,6 +47,46 @@
             margin: 10px;
             color: white;
         }
+
+        /*New CSS for in line audio player*/
+        .inline-audio-player {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+        }
+
+        .text-audio-wrapper {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .play-btn {
+            padding: 5px 10px;
+            font-size: 14px;
+            cursor: pointer;
+        }
+
+        .audio-text-wrapper {
+            display: inline;
+        }
+
+        .audio-text {
+            background-color: transparent;
+            transition: background-color 0.2s ease;
+            cursor: pointer;
+            font-family:Verdana, Geneva, Tahoma, sans-serif;
+            line-height: 1.5;
+        }
+
+        .audio-text.active {
+            background-color: rgba(255, 215, 0, 0.5); /* Highlight text */
+        }
+        .stanzaEn{
+            font-family:Verdana, Geneva, Tahoma, sans-serif;
+            line-height: 1.5;
+        }
+            
 </style>
 </head>
 <body>
@@ -199,25 +238,28 @@
             // Create marker on the map
             new mapboxgl.Marker()
                 .setLngLat([feature.geometry.coordinates[0], feature.geometry.coordinates[1]])
-                .setPopup(new mapboxgl.Popup().setHTML(`<h3>${feature.properties.address}</h3>
-                ${feature.content.audioFile ? `<audio controls><source src="${feature.content.audioFile}" type="audio/mp3"></audio>` : ''}
-                <p class="stanzaEs">${feature.content.stanzaEs}</p>
-                <p class="stanzaEn">${feature.content.stanzaEn}</p>`))
-                .addTo(map);
+                .setPopup(new mapboxgl.Popup().setHTML(`
+                <h3>${feature.properties.address}</h3>
+                ${feature.content.audioFile ? createAudioPlayer(feature) : ''}
+                <p class="stanzaEn">${feature.content.stanzaEn}</p>
+                `))
+            .addTo(map);
 
             // Create dynamic scroll content
             const section = document.createElement('section');
             section.id = feature.id;
+
             section.innerHTML = `
                 <h1>${feature.properties.address}</h1>
-                ${feature.content.audioFile ? `<audio controls><source src="${feature.content.audioFile}" type="audio/mp3"></audio>` : ''}
-                <p class="stanzaEs">${feature.content.stanzaEs}</p>
+                ${feature.content.audioFile ? createAudioPlayer(feature) : ''}
                 <p class="stanzaEn">${feature.content.stanzaEn}</p>
                 <p><a href="${feature.content.articleLink}" target="_blank">Read full article</a></p>
                 <div class="news-image">
                     <img src="${feature.content.articleImg}" alt="Article Image">
                 </div>
             `;
+
+            console.log(section.innerHTML);
             document.getElementById('features').appendChild(section);
         });
 
@@ -260,6 +302,61 @@
                 }
             }
         };
+
+        function toggleAudio(audioSrc, audioId) {
+            const audio = document.getElementById(audioId);
+            const playButton = document.querySelector(`button[onclick="toggleAudio('${audioSrc}', '${audioId}')"]`);
+
+            if (audio.paused) {
+                audio.play();
+                playButton.textContent = "Pause";
+
+                const textWrapper = playButton.nextElementSibling;
+                const spans = textWrapper.querySelectorAll(".audio-text");
+
+                // Sync text with audio time
+                audio.ontimeupdate = () => {
+                    spans.forEach(span => {
+                        const start = parseFloat(span.dataset.start);
+                        const end = parseFloat(span.dataset.end);
+                        span.classList.toggle("active", audio.currentTime >= start && audio.currentTime <= end);
+                    });
+                };
+
+                audio.onended = () => {
+                    playButton.textContent = "Play";
+                };
+            } else {
+                audio.pause();
+                playButton.textContent = "Play";
+            }
+        }
+
+        function createAudioPlayer(feature) {
+            const stanzaLines = feature.content.stanzaEs.split('\n');
+            const startTimes = [0, 4, 8, 12]; // Adjust timing based on your data for the highlight of each line
+            const endTimes = [3, 7, 11, 15]; // Adjust timing based on your data for the highlight of each line
+
+            let stanzaSpans = '';
+
+            stanzaLines.forEach((line, index) => {
+                stanzaSpans += `
+                    <span class="audio-text" data-start="${startTimes[index]}" data-end="${endTimes[index]}">${line}</span>
+                `;
+            });
+
+            return `
+                <div class="inline-audio-player">
+                    <div class="text-audio-wrapper">
+                        <button class="play-btn" onclick="toggleAudio('${feature.content.audioFile}', 'popup-audio-${feature.id}')">Play</button>
+                        <p class="audio-text-wrapper">
+                            ${stanzaSpans}
+                        </p>
+                    </div>
+                    <audio id="popup-audio-${feature.id}" src="${feature.content.audioFile}" hidden></audio>
+                </div>
+            `;
+        }
     </script>
 </body>
 </html>
