--- a/inlineAudioPlayer.html
+++ b/inlineAudioPlayer.html
@@ -1,36 +1,76 @@
 <div class="inline-audio-player">
     <div class="text-audio-wrapper">
+      <blockquote>
         <button id="playBtn">Play</button>
         <p>
-        <span class="audio-text" data-start="0" data-end="3">
+        <span class="audio-text" data-start="0" data-end="8.8">
             If, however, you believe beyond a reasonable doubt that although such arrest or attempted arrest,
         </span>
-        <span class="audio-text" data-start="4" data-end="7">
+        <span class="audio-text" data-start="9" data-end="16.6">
             if any, was in fact an illegal arrest as herein explained in this charge,
         </span>
-        <span class="audio-text" data-start="8" data-end="12">
+        <span class="audio-text" data-start="17" data-end="22.9">
             and the defendant knew the same to be an illegal arrest,
         </span>
-        <span class="audio-text" data-start="13" data-end="16">
+        <span class="audio-text" data-start="23" data-end="27">
             and he resisted such arrest intentionally,
         </span>
-        <span class="audio-text" data-start="17" data-end="21">
-            because it was an illegal arrest, and that while resisting such arrest he killed deceased,
+        <span class="audio-text" data-start="28" data-end="36">
+            because it was an illegal arrest, and that while resisting such arrest he killed the deceased,
         </span>
+        <cite>court case</cite>
         </p>
+      </blockquote>
     </div>
-    <audio id="audioPlayer" src="audio/Tejeda_Greg_Cortez.mp3"></audio>
+    <audio id="audioPlayer" src="audio/court case excerpt audio.mp3"></audio>
   </div>
   
   <style>
     .audio-text {
-      cursor: pointer;
-      background-color: transparent;
-      transition: background-color 0.2s ease;
+      transition: background-color 0.3s ease;
     }
   
     .audio-text.active {
-      background-color: rgba(255, 215, 0, 0.5); /* Highlight text during playback */
+      background-color: orange;
+      font-weight: bold;
+      border-radius: 5px;
+      padding: 2px;
+       /* Highlight text during playback */
+    }
+    .text-audio-wrapper {
+      display:inline-block;
+      font-family:Georgia, 'Times New Roman', Times, serif;
+      font-size: large;
+      margin:1em;
+      max-width:20em;
+      blockquote {
+        border:solid 1em #ccc;
+        display:inline-block;
+        margin:0;
+        padding:1em;
+        position:relative;
+        &:before {
+          background-color: white;
+          bottom: -1em;
+          content: "";
+          left: 2em;
+          position: absolute;
+          right: 2em;
+          top: -1em;
+        }
+        cite {
+          color:#757575;
+          display: block;
+          font-size:small;
+          font-style: normal;
+          text-align: right;
+          text-transform:uppercase;
+        }
+        > * {
+          position: relative;
+          z-index: 1;
+        }
+      }
     }
   </style>
   
@@ -80,6 +120,7 @@
       textSpans[currentSpanIndex].classList.remove('active');
       playBtn.textContent = 'Play';
       isPlaying = false;
+      currentSpanIndex = 0;
     });
   
     // Clicking a text span seeks to its corresponding audio time
