--- a/inlineAudioPlayer.html
+++ b/inlineAudioPlayer.html
@@ -28,7 +28,7 @@
       transition: background-color 0.3s ease;
     }
     .audio-text.active {
-      background-color: rgba(255, 166, 0, 0.888);
+      background-color: lightgrey;
       transition: background-color 0.3 ease-in-out;
       font-weight: bold;
       border-radius: 5px;
