--- a/inlineAudioPlayer.html
+++ b/inlineAudioPlayer.html
@@ -46,7 +46,7 @@
         display:inline-block;
         padding:1em;
         position:relative;
-        &:before {
+        blockquote:before {
           background-color: white;
           bottom: -1em;
           content: "";
